@@ -81,6 +81,8 @@ seconds-standalone=seconds
 seconds-tooltip=The amount of time the recipe will take in a crafter with no modules and a crafting speed of exactly 1.0.
 seconds=__1__ seconds
 session-history=Session history
+setting-highlight_last_selected-tooltip=If enabled, the last selected item will be highlighted. This is useful when flipping back and forth between a list and its contents.
+setting-highlight_last_selected=Highlight last selected item [img=info]
 setting-open_fluid_hotkey-tooltip=If enabled, using the Recipe Book hotkey while hovering over a pipe, pump, storage tank, or fluid wagon will open that fluid's page, if it exists.
 setting-open_fluid_hotkey=Open selected fluid on hotkey [img=info]
 setting-open_item_hotkey-tooltip=If enabled, using the Recipe Book hotkey while holding an item will open that item's page, if it exists.\nYou can also do this by clicking the RB shortcut while holding an item.
